# cuda-learning

./: .clangd  .gitignore  CMakeLists.txt  justfile
scripts/: gen-clangd.sh
src/: get_arch.cu  hello.cu
src/multi/: CMakeLists.txt  Makefile
src/multi/include/: kernels.cuh
src/multi/src/: kernels.cu  main.cu
